--- a/data/icons/meson.build
+++ b/data/icons/meson.build
@@ -1,13 +1,10 @@
-application_id = 'com.github.Aurnytoraink.HangmanGame'
-
-scalable_dir = join_paths('hicolor', 'scalable', 'apps')
 install_data(
-  join_paths(scalable_dir, ('@0@.svg').format(application_id)),
-  install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir)
+  '@0@.svg'.format(application_id),
+  install_dir:  get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps'
 )
 
-symbolic_dir = join_paths('hicolor', 'symbolic', 'apps')
 install_data(
-  join_paths(symbolic_dir, ('@0@-symbolic.svg').format(application_id)),
-  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
+  '@0@-symbolic.svg'.format(application_id),
+  install_dir:  get_option('datadir') / 'icons' / 'hicolor' / 'symbolic' / 'apps',
+  rename: '@0@-symbolic.svg'.format(application_id)
 )
